--- a/wallet/wallet_chrome/manifest.json
+++ b/wallet/wallet_chrome/manifest.json
@@ -1,10 +1,11 @@
 {
   "name": "아이오타닷",
-  "description": "하모니(Harmony ONE) 블록체인 지갑(Wallet) 입니다",
-  "version": "0.0.1",
+  "description": "탱글탱글한 하모니(Harmony ONE) 블록체인 지갑(Wallet) 입니다",
+  "version": "1.0.0",
   "background": {
     "service_worker": "background.js"
   },
+  
   "permissions": ["storage"],
   "action": {
     "default_popup": "popup.html",
